# datafusion

./: Cargo.toml  README.md
benchmarks/: bench.sh
datafusion/common/: Cargo.toml
datafusion/common/src/: config.rs
datafusion/common/src/file_options/: parquet_writer.rs
datafusion/core/tests/dataframe/: mod.rs
datafusion/core/tests/physical_optimizer/: filter_pushdown.rs
datafusion/datasource-parquet/benches/: selectivity_tracker.rs
datafusion/datasource-parquet/src/: access_plan.rs  opener.rs  page_filter.rs  row_filter.rs  row_group_filter.rs  selectivity.rs  source.rs
datafusion/datasource-parquet/src/selectivity/: config.rs  mod.rs  skippable.rs  stats.rs  tests.rs  tracker.rs  types.rs
datafusion/datasource/src/: file_scan_config.rs  file_stream.rs  source.rs
datafusion/datasource/src/morsel/: mod.rs
datafusion/physical-expr-common/src/: physical_expr.rs
datafusion/physical-expr/src/expressions/: dynamic_filters.rs  mod.rs
datafusion/physical-plan/src/: coalesce_batches.rs
datafusion/physical-plan/src/aggregates/: mod.rs
datafusion/physical-plan/src/sorts/: sort.rs
datafusion/proto-common/proto/: datafusion_common.proto
datafusion/proto-common/src/from_proto/: mod.rs
datafusion/proto/proto/: datafusion.proto
datafusion/pruning/src/: pruning_predicate.rs
datafusion/sqllogictest/test_files/: clickbench.slt  explain.slt  information_schema.slt  joins.slt  parquet_filter_pushdown.slt  projection_pushdown.slt  push_down_filter_parquet.slt  sort_pushdown.slt  statistics_registry.slt
datafusion/tests/: Cargo.toml
datafusion/tests/src/: lib.rs
datafusion/tests/tests/: dynamic_filter_proto_roundtrip.rs
docs/source/user-guide/: configs.md
(+11 files in other folders)
